Do not clip site navigation container to prevent rendering scrollbars

--- a/source/assets/stylesheets/styles/_site_navigation.scss
+++ b/source/assets/stylesheets/styles/_site_navigation.scss
@@ -64,7 +64,7 @@
   @include breakpoint($tablet-breakpoint) {
     display: block;
     height: inherit;
-    overflow: auto;
+    overflow: visible;
     -webkit-overflow-scrolling: auto;
   }
 }
